# quanergy_client

./: .gitignore  CMakeLists.txt  NVidiaDrivePX.md  README.md  generate_docs.sh  package.xml
apps/: dynamic_connection.cpp  visualizer.cpp  visualizer_module.cpp  visualizer_module.h
cmake/: QuanergyClientConfig.cmake.in  QuanergyClientConfigVersion.cmake.in
debian/: postinst-dev.in  postinst.in  postrm-dev.in  preinst-dev.in  prerm.in
docs/: doxyfile.in
docs/html/: annotated.html  classM8Client-members.html  classM8Client.html  classes.html  classquanergy_1_1client_1_1Client-members.html  classquanergy_1_1client_1_1Client.html  classquanergy_1_1client_1_1FailoverClient-members.html  classquanergy_1_1client_1_1FailoverClient.html  client_8h.html  client_8h_source.html  client_8hpp_source.html  deserialize_8h.html  deserialize_8h_source.html  deserialize__00_8h.html  deserialize__00_8h_source.html  deserialize__01_8h_source.html  dir_055cde1d11405c008de3f5a3fef8e9fe.html  dir_1dfed1f655d70063d253fec7a798685f.html  dir_2dda8c77f6a69d1d7304363b3487e3da.html  dir_410a9f806964d364e283bd1ab3f91689.html  dir_42f0205ba385f43a4bb4ce52c2034403.html  dir_7eb6aa9e991e0740a584cd0e61f0280c.html  dir_ae98a5f60685660b197df0b219634d12.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f0779ce334b313a2af7748893addf982.html  distance__filter_8h.html  distance__filter_8h_source.html  exceptions_8h.html  exceptions_8h_source.html  failover__client_8h.html  failover__client_8h_source.html  failover__client_8hpp_source.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  m8__client_8h.html  (+79 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_6.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  search.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
include/: client.h  deserialize.h  deserialize_00.h  deserialize_01.h  deserialize_failover.h  failover_client.h  m8_client.h  pointcloud_generator.h  pointcloud_generator_00.h  pointcloud_generator_01.h  pointcloud_generator_failover.h
include/impl/: client.hpp  failover_client.hpp
include/quanergy/client/: client.h  deserialize.h  deserialize_00.h  deserialize_01.h  device_config.h  device_info.h  exceptions.h  failover_client.h  http_client.h  m8_data_packet.h  m_series_data_packet.h  packet_header.h  packet_parser.h  pointcloud_generator.h  pointcloud_generator_00.h  pointcloud_generator_01.h  pointcloud_generator_failover.h  pointcloud_generator_m8.h  pointcloud_types.h  polar_to_cart_filter.h  sensor_client.h  tcp_client.h  version.h  version.hpp
include/quanergy/client/impl/: client.hpp  failover_client.hpp  tcp_client.hpp
include/quanergy/common/: angle.h  dll_export.h  notifications.h  point_hvdir.h  point_xyz.h  point_xyzir.h  pointcloud_types.h
include/quanergy/modules/: distance_filter.h  encoder_angle_calibration.h  encoder_correction.h  horizontal_angle_correction.h  polar_to_cart_converter.h  polar_to_cart_filter.h  ring_intensity_filter.h
include/quanergy/parsers/: data_packet_00.h  data_packet_01.h  data_packet_04.h  data_packet_06.h  data_packet_parser.h  data_packet_parser_00.h  data_packet_parser_01.h  data_packet_parser_04.h  data_packet_parser_06.h  data_packet_parser_failover.h  data_packet_parser_m8.h  data_packet_parser_m_series.h  deserialize_00.h  deserialize_01.h  failover_client.h  packet_parser.h  pointcloud_generator_00.h  pointcloud_generator_01.h  pointcloud_generator_failover.h  pointcloud_generator_m8.h  variadic_packet_parser.h
include/quanergy/parsers/impl/: failover_client.hpp
include/quanergy/pipelines/: async.h  sensor_pipeline.h  sensor_pipeline_settings.h
readme/: ubuntu.md  ubuntu1404.md  ubuntu1604.md  ubuntu1804.md  vcpkg.patch  win10vs2019.md  win7vs2013.md  win7vs2015.md  windows.md
settings/: client.xml
src/: m8_client.cpp  test.cpp
src/client/: device_config.cpp  device_info.cpp  http_client.cpp  polar_to_cart_filter.cpp
src/common/: notifications.cpp  point_xyz.cpp  point_xyzir.cpp
src/modules/: distance_filter.cpp  encoder_angle_calibration.cpp  encoder_correction.cpp  horizontal_angle_correction.cpp  polar_to_cart_converter.cpp  polar_to_cart_filter.cpp  ring_intensity_filter.cpp
src/parsers/: data_packet_parser_00.cpp  data_packet_parser_01.cpp  data_packet_parser_04.cpp  data_packet_parser_06.cpp  data_packet_parser_failover.cpp  data_packet_parser_m8.cpp  data_packet_parser_m_series.cpp
src/pipelines/: sensor_pipeline.cpp  sensor_pipeline_settings.cpp
src/test/: test.cpp
test/: test_encoder_angle_calibration.cpp
windows/: build_for_MSVC.txt  readme.md  windows_readme.md
