<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quanergy_client</name>
  <version>5.0.0</version>
  <description>Quanergy Sensor SDK</description>

  <maintainer email="ross.taylor@quanergy.com">Ross Taylor</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>
  <depend>boost</depend>
  <depend>libpcl-all-dev</depend>
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
